# tulip-indicator

./: .gitignore  CHANGELOG.md  CLAUDE.md  METHODOLOGY.md  README.md  SKILL.md  indicators.yaml  pyproject.toml  score.py  tulip.py
history/: gli_history.csv  ti_history.csv  ti_history_v2.csv
tests/: test_smoke.py
tulip/: cli.py  fred.py  proxies.json  score.py
